--- a/main.css
+++ b/main.css
@@ -144,11 +144,13 @@ body {
 
 .main .container .title {
   padding: 20px;
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-align: center;
-  font-weight: bold;
+  font-weight: 400;
   padding-bottom: 15px;
   border-bottom: 2px solid #fff;
+  -webkit-text-stroke: 2px #ff3a3a;
+  color: transparent;
 }
 
 .main .container-fluid {
@@ -164,13 +166,14 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 0 30px;
 }
 
 .main .container-fluid .card {
-  padding: 10px;
-  background: #222327;
-  -webkit-box-shadow: 0 0 10px 0 #fff;
-          box-shadow: 0 0 10px 0 #fff;
+  padding: 15px;
+  background: #e2ff05;
+  -webkit-box-shadow: 0 0 20px 0 #e2ff05;
+          box-shadow: 0 0 20px 0 #e2ff05;
   margin: 20px 0;
   border-radius: 20px;
   -webkit-transition: all ease-out 0.2s;
@@ -179,11 +182,14 @@ body {
 
 .main .container-fluid .card .card-title {
   text-align: center;
-  color: #ffffff;
+  color: #000;
+  font-weight: 600;
+  line-height: 15px;
 }
 
 .main .container-fluid .card .card-text {
   text-align: center;
+  color: #000;
 }
 
 .main .container-fluid .card:hover {
@@ -194,12 +200,15 @@ body {
 .main .text_main {
   padding: 20px;
   text-align: center;
+  padding-bottom: 50px;
 }
 
 .main .text_main .text__one {
   font-size: 2rem;
-  color: #fff;
-  padding-bottom: 20px;
+  -webkit-text-stroke: 2px #fc26df;
+  color: transparent;
+  padding-bottom: 40px;
+  text-shadow: 0 5px 5px #fc26df;
 }
 
 .main .text_main .button2 {
@@ -286,6 +295,89 @@ body {
   border: 2px solid var(--clr);
 }
 
+.footer {
+  background: #222327;
+}
+
+.footer .text__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 30px;
+  -webkit-text-stroke: 2px #fcf826;
+  color: transparent;
+  padding-top: 20px;
+  font-family: 'Finlandica', sans-serif;
+}
+
+.footer ul {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+  padding: 30px 0;
+}
+
+.footer ul li {
+  position: relative;
+  width: 100%;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 15px 35px black;
+          box-shadow: 0 15px 35px black;
+}
+
+.footer ul li .fa {
+  font-size: 6rem;
+  -webkit-text-stroke: 2px var(--clr);
+  color: transparent;
+  cursor: pointer;
+}
+
+.footer ul li:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  border-bottom: 4px solid var(--clr);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  font-family: fontAwesome;
+  text-align: center;
+  line-height: 120px;
+  font-size: 6rem;
+  color: var(--clr);
+}
+
+.footer ul li:hover::before {
+  height: 100%;
+}
+
+.footer ul li:nth-child(1):before {
+  content: "\f232";
+}
+
+.footer ul li:nth-child(2):before {
+  content: "\f16d";
+}
+
 @media (max-width: 400px) {
   .header .title {
     font-size: 2.2rem;
@@ -318,6 +410,7 @@ body {
   .main .text_main {
     padding: 15px;
     text-align: center;
+    padding-bottom: 60px;
   }
   .main .text_main .text__one {
     color: #fff;
@@ -325,14 +418,18 @@ body {
     padding-bottom: 35px;
   }
   .main .text_main .button2 {
-    color: gold;
+    color: white;
     font-size: 1rem;
     text-decoration: none;
     background: #222327;
     padding: 15px;
     border-radius: 20px;
-    -webkit-box-shadow: 0 0 20px 0 goldenrod;
-            box-shadow: 0 0 20px 0 goldenrod;
+    -webkit-box-shadow: 0 0 20px 0 white;
+            box-shadow: 0 0 20px 0 white;
+  }
+  .main .container-fluid {
+    padding: 20px;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=main.css.map */
