--- a/main.scss
+++ b/main.scss
@@ -119,11 +119,13 @@ body{
         display: block;
         .title{
             padding: 20px;
-            font-size: 1.5rem;
+            font-size: 2rem;
             text-align: center;
-            font-weight: bold;
+            font-weight: 400;
             padding-bottom: 15px;
             border-bottom: 2px solid #fff;
+            -webkit-text-stroke: 2px #ff3a3a;
+            color: transparent;
         }
     }
     .container-fluid{
@@ -132,20 +134,23 @@ body{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding: 0 30px;
         .card{
-            padding: 10px;
-            background: #222327;
-            box-shadow: 0 0 10px 0 #fff;
+            padding: 15px;
+            background: #e2ff05;
+            box-shadow: 0 0 20px 0 #e2ff05;
             margin: 20px 0;
             border-radius: 20px;
             transition: all ease-out 0.2s;
             .card-title{
                 text-align: center;
-                color: #ffffff;
-
+                color: #000;
+                font-weight: 600;
+                line-height: 15px;
             }
             .card-text{
                 text-align: center;
+                color: #000;
 
             }
         }
@@ -156,10 +161,13 @@ body{
     .text_main{
         padding: 20px;
         text-align: center;
+        padding-bottom: 50px;
         .text__one{
             font-size: 2rem;
-            color: #fff;
-            padding-bottom: 20px;
+            -webkit-text-stroke: 2px #fc26df;
+            color: transparent;
+            padding-bottom: 40px;
+            text-shadow: 0 5px 5px #fc26df;
         }
         .button2{
             font-family: 'Finlandica', sans-serif;
@@ -232,6 +240,66 @@ body{
     }
 }
 
+.footer{
+    background: #222327;
+    .text__footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 30px;
+        -webkit-text-stroke: 2px #fcf826;
+        color: transparent;
+        padding-top: 20px;
+        font-family: 'Finlandica', sans-serif;
+    }
+    ul {
+        position: relative;
+        display: flex;
+        gap: 40px;
+        padding: 30px 0;
+        li{
+            position: relative;
+            width: 100%;
+            height: 120px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 1);
+            .fa{
+                font-size: 6rem;
+                -webkit-text-stroke: 2px var(--clr);
+                color: transparent;
+                cursor: pointer;
+            }
+        }
+    }
+    ul li:before{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        border-bottom: 4px solid var(--clr);
+        transition: 0.5s ease-in-out;
+        font-family: fontAwesome;
+        text-align: center;
+        line-height: 120px;
+        font-size: 6rem;
+        color: var(--clr);
+
+    }
+    ul li:hover::before{
+        height: 100%;
+    }
+    ul li:nth-child(1):before{
+        content: "\f232";
+    }
+    ul li:nth-child(2):before{
+        content: "\f16d";
+    }
+}
+
 
 
 
@@ -270,20 +338,25 @@ body{
         .text_main{
             padding: 15px;
             text-align: center;
+            padding-bottom: 60px;
             .text__one{
                 color: #fff;
                 font-size: 1.8rem;
                 padding-bottom: 35px;
             }
             .button2{
-                color: gold;
+                color: white;
                 font-size: 1rem;
                 text-decoration: none;
                 background: #222327;
                 padding: 15px;
                 border-radius: 20px;
-                box-shadow: 0 0 20px 0 goldenrod;
+                box-shadow: 0 0 20px 0 white;
             }
+        }
+        .container-fluid{
+            padding: 20px;
+            text-align: center;
         }
     }
 }
