--- a/main.scss
+++ b/main.scss
@@ -134,7 +134,8 @@ body{
         height: auto;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
         padding: 0 30px;
         .card{
