--- a/main.css
+++ b/main.css
@@ -172,7 +172,7 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 0 30px;
+  /* padding: 0 30px; */
 }
 
 .main .container-fluid .card {
