--- a/main.scss
+++ b/main.scss
@@ -137,7 +137,7 @@ body{
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding: 0 30px;
+        /* padding: 0 30px; */
         .card{
             padding: 15px;
             background: #e2ff05;
