--- a/main.css
+++ b/main.css
@@ -164,15 +164,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  /* padding: 0 30px; */
 }
 
 .main .container-fluid .card {
@@ -209,7 +207,7 @@ body {
   padding-bottom: 50px;
 }
 
-.main .text_main .text__one {
+.main .text_main #textOne {
   font-size: 2rem;
   -webkit-text-stroke: 2px #fc26df;
   color: transparent;
