--- a/main.scss
+++ b/main.scss
@@ -134,10 +134,9 @@ body{
         height: auto;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         flex-wrap: wrap;
-        /* padding: 0 30px; */
         .card{
             padding: 15px;
             background: #e2ff05;
@@ -165,7 +164,7 @@ body{
         padding: 20px;
         text-align: center;
         padding-bottom: 50px;
-        .text__one{
+        #textOne{
             font-size: 2rem;
             -webkit-text-stroke: 2px #fc26df;
             color: transparent;
